--- a/kubernetes-yaml/deployment.yaml
+++ b/kubernetes-yaml/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: web-application
-        image: 108290765801.dkr.ecr.us-east-1.amazonaws.com/web-application:latest
+        image: 288761744702.dkr.ecr.ap-south-1.amazonaws.com/web-application:latest
         ports:
         - containerPort: 8080
