--- a/kubernetes-yaml/deployment.yaml
+++ b/kubernetes-yaml/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: web-application
-        image: a0twcdxxwofaz.jfrog.io/web-application/web-app:latest
+        image: dell123.jfrog.io/web-application/web-application:latest
         ports:
         - containerPort: 8080
       imagePullSecrets:
