--- a/kubernetes-yaml/deployment.yaml
+++ b/kubernetes-yaml/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - name: regcred
       containers:
       - name: web-application
-        image: devopsmurali.jfrog.io/web-application/web-app:latest
+        image: dell123.jfrog.io/web-application/web-application:latest
         ports:
         - containerPort: 8080
       imagePullSecrets:
